Bug 372067 - Can't reach folder of selected file after clicking a file on the found files window
Summary: Can't reach folder of selected file after clicking a file on the found files ...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.5.0
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 11:41 UTC by Rafael Linux User
Modified: 2018-05-06 00:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2016-11-04 11:41:08 UTC
If I do a search over FTP site, when I click in any file of the "Results" tab, Krusader main window appear and try to locate the folder, but can't do that. Instead it shows "Error: Folder (name_of_folder) doesn't exist".

This was working fine in previous version.

Thank you
Comment 1 Alex Bikadorov 2016-11-04 19:00:06 UTC
Git commit 4e2ba6e91413d12fdfd31d6c23d862f6ffcf5c63 by Alexander Bikadorov.
Committed on 04/11/2016 at 18:59.
Pushed by abikadorov into branch 'master'.

FIXED: [ 372067 ] Wrong path when showing non local files and folders from search dialog in panel

Bug came with 1da1b23f

M  +6    -1    krusader/Search/krsearchdialog.cpp

http://commits.kde.org/krusader/4e2ba6e91413d12fdfd31d6c23d862f6ffcf5c63
Comment 2 Alex Bikadorov 2016-11-04 19:00:55 UTC
Thanks for reporting
Comment 3 Rafael Linux User 2016-11-05 18:33:24 UTC
Thanks to you for your quick fix.