FIXED: [ 372067 ] Wrong path when showing non local files and folders from search dialog in panel

Bug came with 1da1b23f
BUG: 372067